# explore_misspecifications

./: income_model.py  income_preprocess.py  pyproject.toml
data/: income_dataset.csv  income_dataset_clean.csv
oliveiraEtAl/: oliveiraEtAl.ipynb
oliveiraEtAl/data/: stackoverflow.csv  superuser.csv
oliveiraEtAl/replication/: baseline_no_russia  m1_no_russia  m2_no_russia
