[tool.poetry]
name = "Explore Model Misspecifications"
version = "0.0.1"
description = "Authoring multiverses to explore model misspecificaations and their implications"
authors = ["Eunice Jun <eunice.m.jun@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
boba = "^1.1.2"
scipy = "^1.7.1"
boba-visualizer = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
